# testEngine

./: CMakeLists.txt  README.md  main.cpp
bgfx/lib/: bimg_decodeDebug.lib  bimg_decodeRelease.lib
shaders/: f_simple.sc  v_simple.sc  varying.def.sc
src/: main.cpp
